Fix home page title size on mobile display

--- a/notabanane/static/sass/pages/blog/index.scss
+++ b/notabanane/static/sass/pages/blog/index.scss
@@ -283,5 +283,11 @@ body#id_blog_index {
         }
       }
     }
+
+    @include until($tablet) {
+      h2 {
+        font-size: 2rem !important;
+      }
+    }
   }
 }
